--- a/style.css
+++ b/style.css
@@ -59,17 +59,16 @@ body {
 .nav li {
     list-style: none;
     padding: 2px;
-    margin-right: 15px;
-    text-align: center;
-    /*background: rgba(255,20,20,0);*/
-}
+    margin-right: 4px;
+    text-align: left;
+   }
 .nav li a {
 	text-decoration: none;
-	background-color: rgba(0, 0, 0, 0.9);
-	color:  #fff;
-	font-size: 20px;
+	background-color: transparent;
+	color: #fff;
+	font-size: 16px;
 	font-weight: 700;
-	line-height: 30px;
+	line-height: 16px;
 	text-transform: uppercase;
 	letter-spacing: 5px;
 	text-shadow: 2px 2px #000;
@@ -78,49 +77,40 @@ body {
     -o-transition: all 0.3s;
 	transition: all .3s;
 }
-.nav li a:hover {
+.nav li a:hover, .nav li a:focus {
     color: #FFF;
     transform: scale(1.2);
     background: rgba(255,20,20,0);
 }
 .navbar-brand {
 	color: #FFF;
-	font-size: 35px;
+	font-size: 30px;
 	font-weight: 700;
 	letter-spacing: 5px;
 	text-shadow: 2px 2px #000;
 	transition: all .3s;
 }
 .navbar-brand:hover {
+	color: #FFF;
 	transform: scale(1.2);
-	color: #00ff00;
 	text-shadow: 2px 2px #000;
 }
 
 /*jumbotron*/
-/**jumbo**/
+
 .jumbotron {
-	width: 100%;
-  	height: 100vh;
-  	display: block;
-  	position: relative;
-}
-.jumbotron {
-	background-image: url("./img/img3.jpg");
+	background-image: url("./img/img7.jpg");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	opacity: 0.8;
-	position: absolute;
-  	z-index: -1;
-	top: 0;
- 	left: 0;
-  	bottom: 0;
-  	right: 0;
+	opacity: 0.7;
+	width: 100%;
+  	height: 100vh;
+  	margin-bottom: 0;
 }
 .slogan h1 {
 	color: #fff;
-	font-size: 60px;
+	font-size: 40px;
 	font-weight: 700;
 	text-align: center;
 	text-transform: uppercase;
@@ -130,7 +120,7 @@ body {
 }
 .slogan p {
 	color:  #fff;
-	font-size: 45px;
+	font-size: 25px;
 	font-weight: 500;
 	text-align: center;
 	letter-spacing: 4px;
@@ -140,8 +130,89 @@ body {
 }
 .slogan {
 	width: 50%;
-	
-	margin-top: 15%;
+	margin-top: 140px;
+	background-color: #000;
+	border: 3px solid #FFF;
+}
+
+/*about me*/
+.about_Me {
+	background-image: url("./img/img7.jpg");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	opacity: 0.7;
+	width: 100%;
+  	height: 100vh;
+  	padding-left: 25vw;
+  	padding-top: 30vh;
+  	margin-bottom: 0;
+}
+.about {
+	background-color: #000;
+	margin-right: 300px;
+}
+.photo {
+	width: 285px;
+	height: 273px;
+}
+.photo img {
+	width: 285px;
+	height: 273px;
+	object-fit: cover;
+}
+.about {
+	box-shadow: 2px 2px #FFF;
+}
+.about_text {
+	height: 273px;
+}
+.about_text h2 {
+	font-size: 20px;
+	color: #FFF;
+	font-weight: 700;
+	letter-spacing: 5px;
+	text-align: left;
+	padding-left: 60px;
+}
+.about_text p {
+	color: #FFF;
+	font-size: 16px;
+	letter-spacing: 3px;
+	padding-left: 60px;
+	padding-right: 20px;
+	text-align: left;
+}
+
+/*skills*/
+.my_skills {
+	height: 100vh;
+	text-align: center;
+	padding-top: 20px;
+	background-color: #000;
+}
+.my_skills h2 {
+	padding-bottom: 15px;
+	color: #FFF;
+}
+
+.col {
+	/*border: 2px solid red;*/
 	border-radius: 10px;
-	background-color: rgba(0, 0, 0, 0.8);
+	width: 130px;
+	height: 130px;
+	background-color: #FFF;
+	margin: 10px;
+	
+}
+
+.col img {
+	width: 110px;
+	height: 110px;
+	object-fit: cover;
+	padding: 10px;
+
+}
+.skills {
+	
 }
