--- a/style.css
+++ b/style.css
@@ -42,23 +42,21 @@ body {
 /*jumbotron*/
 /**navigation**/
 
-.navbar {
-     height: 80px;
+.navbar.navbar-default.navbar-fixed-top {
+    max-height: 50px;
+    background-color: transparent;
+    border-color: transparent;
+    transition: background-color 2s; 
 }
-.navbar .navbar-nav {
+.navbar-toggle:hover, .navbar-dark .navbar-toggle:focus{
+    background-color: transparent !important;
+}
+.navbar-nav {
      display: inline-block;
      float: none;
-     vertical-align: top;
 }
-.navbar .navbar-collapse {
+.collapse {
      text-align: center;
-}
-.nav {
-    background: transparent;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    text-align: center;
 }
 .nav li {
     list-style: none;
@@ -68,10 +66,10 @@ body {
 }
 .nav li a {
     text-decoration: none;
-    color: #fff;
+    color: #FFF;
     font-size: 16px;
     font-weight: 700;
-    line-height: 60px;
+    line-height: 50px;
     text-transform: uppercase;
     letter-spacing: 7px;
     text-shadow: 2px 2px #000;
@@ -127,7 +125,7 @@ h2 > span:after{
 
 /*jumbotron*/
 .jumbotron {
-	background-image: url("./img/img28.jpg");
+	background: linear-gradient(rgba(68, 64, 60, 0.7), rgba(153, 150, 145, 0.85)), url(./img/img28.jpg) 50% 50%;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -138,22 +136,10 @@ h2 > span:after{
   	margin: 0;
   	position: relative;
 }
-.layer_jumb {
-	opacity: 1;
-	background: rgba(0, 0, 0, 0.5);
-	transition-duration: 0.8s;
-	position: absolute;
-	width: 100%;
-	height: 100vh;
-	padding: 0;
-  	margin: 0;
-}
 .slogan {
-	/*border: 2px solid orange;*/
-	/*width: 80%;*/
+	/*border: 2px solid green;*/
 	margin: 0 auto;
 	margin-top: 10%;
-	
 }
 .jumbo div {
 	animation: marginLeft 3s infinite;
@@ -172,7 +158,6 @@ h2 > span:after{
         margin-left: 0;
     }
 }
-
 
 .slogan h1 {
 	color: #FFF;
@@ -213,7 +198,7 @@ h2 > span:after{
 
 /*about me*/
 .about_Me {
-	background-image: url("./img/dot4.jpg");
+	background-image: url("./img/about.jpg");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -261,31 +246,18 @@ h2 > span:after{
 
 /*skills*/
 .my_skills {
+	background-image: url('./img/skills1.png'), url('./img/skills2.png'), url('./img/skills3.png');
 	min-height: 1440px;
 	text-align: center;
 	padding-top: 80px;
-	background-color: #404040;
-	/*border: 3px solid green;*/
-	color:#fff;
-    text-align:center;
-    background-image: url('./img/dot1.png');
-    background-repeat: repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    font-size: 12px;
-    font-family: 'Dancing Script', cursive;
-    -webkit-animation: backgroundScroll 15s linear 1;
-    -webkit-animation-fill-mode: forwards;
-    animation: backgroundScroll 15s linear 1;
-    animation-fill-mode: forwards;
+	color: #fff;
+    text-align: center;
+    animation: dot 20s linear infinite;
 }
-@keyframes backgroundScroll {
-    from {background-position: 0 0;}
-    to {background-position: -180px 0px;}
-}
-@-webkit-keyframes backgroundScroll {
-    from {background-position: 0 0;}
-    to {background-position: -180px 0px;}
+
+@keyframes dot {
+	0% {background-position: 0px 0px;}
+	100% {background-position: 500px 1000px, 500px 500px, 300px 300px;}
 }
 
 .my_skills h2 {
@@ -328,7 +300,7 @@ h2 > span:after{
 
 /*works*/
 .my_project {
-	background-image: url("./img/img30.jpg");
+	background: linear-gradient(rgba(245, 245, 245, 0.5), rgba(249, 249, 249, 0.5)), url("./img/img30.jpg") 50% 50%;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -463,7 +435,7 @@ h2 > span:after{
 	font-weight: 600;
 	margin: 10px;
 	background-color: #FFF;
-	box-shadow: 0px 0px 10px #34495e;
+	box-shadow: 0px 0px 20px #34495e;
 	background: radial-gradient(100% 100%, #737373, #FFF);	
 	background: -webkit-radial-gradient(100% 100%, #737373, #FFF);
 }
@@ -509,7 +481,7 @@ h2 > span:after{
 	color: #b3b3b3;
 	padding: 5px;
 	font-size: 12px;
-	font-weight: 600;
+	font-weight: 700;
 }
 ._footer p {
 	padding-bottom: 0;
@@ -523,7 +495,7 @@ h2 > span:after{
 	margin: 0 2px;
 	display: inline-block;
 	background-color: #000;
-	color: #b3b3b3;
+	color: #21a298;
 	padding-left: 2px;
 	transition: all .3s;
 }
