--- a/sass/style.scss
+++ b/sass/style.scss
@@ -580,36 +580,236 @@ h2 {
 	}
 }
 
-/*@media (max-width: 768px) {
+@media (max-width: 768px) {
      [class*="col-"] {
          float: none;
     }
-
+    /*nav*/
+     .navbar-collapse {
+         border: 0;
+    }
+     .navbar-nav {
+         margin: 0;
+    }
+     .icon-bar {
+         background-color: #FFF;
+    }
+     .navbar-toggle {
+         background-color: rgba(255, 255, 255, 0.15);
+         border: 2px solid #FFF;
+    }
     .nav {
 		li {
-			padding: 0 10px;
+			padding: 0;
 			a {
 				font-size: 14px;
-				letter-spacing: 2px;
+         		line-height: 10px;
+         		letter-spacing: 1px;
 			}
 		}
 	}
+
+	/*logo*/
 	.logo {
-		left: 30px;
+		width: 40px;
+		height: 40px;
+		font-size: 14px;
+		line-height: 40px;
+		top: 10px;
+		left: 10px;
+		opacity: 0.5;
 	}
 
+	/*jumbo*/
+	.slogan {
+		h1 {
+			font-size: 45px;
+			font-weight: 700;
+			letter-spacing: 1px;
+			margin-top: 130px;
+			&:first-letter {
+				font-size: 60px;
+			}
+		}
+		h2 {
+			color: $white;
+			font-size: 30px;
+		}
+		p {
+			font-size: 20px;
+			&:first-letter {
+				font-size: 30px;
+			}
+		}
+	}
+
+	/*about*/
 	.about {
 		width: 100%;
-		height: 100%;
+		height: auto;
+		margin: 0 auto;
+		display: block;
 	}
 	.photo {
 		width: 200px;
 		height: 200px;
-		img {
+		margin: 0 auto;
+		text-align: center;
+		margin-bottom: 30px;
+		img {		
 			width: 200px;
 			height: 200px;
 		}
 	}
 	.about_text {
-		width: 50%;
-	}*/
+		width: 100%;
+		h2 {
+			font-size: 25px;
+			letter-spacing: 0;
+		}
+		p {
+			font-size: 16px;
+			text-align: center;
+			padding: 10px;
+		}
+	}
+
+	/*skills*/
+	.my_skills {
+		min-height: 600px;
+		padding-top: 20px;
+		h2 {
+			font-size: 25px;
+			color: $white;
+			margin-bottom: 40px;
+		}
+	}
+	.row_1 {
+		div {
+			width: 50px;
+			height: 50px;
+			margin: 5px;
+			padding: 5px;
+		}
+		img {
+			width: 40px;
+			height: 40px;
+		}
+	}
+
+	/*project*/
+	.my_project {
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
+	.project_item {
+		h2 {
+			font-size: 25px;
+			margin-bottom: 30px;
+		}
+	}
+	.row_2 {
+		display: block;
+		margin: 0 auto;
+		width: 250px;
+		height: auto;
+	}
+	.picture {
+		padding: 10px;
+		margin-bottom: 20px;
+		display: block;
+		img {
+			display: block;
+			width: 210px;
+			height: 150px;
+		}
+	}
+	.layer_gal {
+		opacity: 0.9;
+		width: 210px;
+		height: 150px;
+		h2, p {
+			display: none;
+		}
+		i {
+		top: 40%;
+		}
+	}
+
+	/*contact*/
+	.contact {
+		width: 100%;
+		height: auto;
+		padding-top: 30px;
+		margin-left: 0;
+		padding-left: 0;
+		h2 {
+			font-size: 25px;
+			margin-bottom: 30px;
+		}
+	}
+	.contact_form {
+		width: 100%;
+		display: block;
+		margin: 0 auto;
+		button {
+			margin-bottom: 30px;
+		}
+	}
+	.contact_data {
+		width: 100%;
+		display: block;
+		margin: 0 auto;
+		text-align: center;	
+	}
+	.form {
+		float: none;
+		margin-top: 30px;
+		h3 {
+			font-size: 20px;
+		}
+	}
+	.form-group {
+		input {
+			width: 100%;
+		}
+		textarea {
+			width: 100%;
+		}
+	}
+	.data {
+		float: none;
+		p {
+			font-size: 12px;
+		}
+	}
+	.data_1 {
+		width: 200px;
+		height: 120px;
+		font-size: 12px;
+		margin-bottom: 10px;
+	}
+	.data_1.email, .data_1.phone_nr {
+		padding-top: 10px;
+	}
+	.icons {
+		a {
+			width: 40px;
+			height: 40px;
+			line-height: 40px;
+			margin: 30px 10px;
+		}
+	}
+
+	/*footer*/
+	._footer {
+		display: block;
+		text-align: center;
+		font-size: 10px;
+	}
+	
+	#scroll-to-top {
+		bottom: 80px;
+		right: 20px;
+	}
+}
